--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow: hidden;
   position: relative;
+  @include media-breakpoint-down(lg) {
+    overflow: hidden;
+  }
 }
 
 .container {
@@ -25,9 +27,10 @@
 }
 
 .section {
-  margin-bottom: 150px;
+  padding-bottom: 150px;
   flex-shrink: 0;
   position: relative;
+  overflow: hidden;
   &__head {
     margin-bottom: 45px;
   }
@@ -45,10 +48,10 @@
     }
   }
   &:first-child {
-    margin-top: 75px;
+    padding-top: 75px;
   }
   &:last-child {
-    margin-bottom: 80px;
+    padding-bottom: 80px;
   }
   @include media-breakpoint-up(sm) {
     &__head {
@@ -65,7 +68,7 @@
     }
   }
   @include media-breakpoint-down(sm) {
-    margin-bottom: 100px;
+    padding-bottom: 100px;
     &_border {
       &::after {
         bottom: -50px;
