--- a/src/views/layout/layout.pug
+++ b/src/views/layout/layout.pug
@@ -47,7 +47,7 @@ html(lang='ru')
     script(src="./scripts/libs/current-device.min.js")
     script(src="./scripts/scripts.js")
 
-    script(src="./scripts/filter-fix.js")
+    //script(src="./scripts/filter-fix.js")
     
 
     //preview only 
