--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,7 +15,7 @@
     position: fixed;
   }
   &__container {
-    height: 65px;
+    height: var(--header-height);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -127,9 +127,6 @@
     }
     &__large-button {
       display: none;
-    }
-    &__container {
-      height: 50px;
     }
     &__small-buttons {
       margin-left: var(--spacer);
