--- a/src/views/katalog.pug
+++ b/src/views/katalog.pug
@@ -26,80 +26,39 @@ block content
 
                 .catalogue-filter__box
                   //category
-                  .catalogue-filter__category.is-active(data-toggle="parent")   
-                    a(href="#" data-toggle="trigger").catalogue-filter__category-head.is-active
+                  .catalogue-filter__category
+                    a(href="javascript:void(0);").catalogue-filter__category-head
                       span Орехи
                       svg.icon
                         use(xlink:href='./img/icons/sprite.svg#drop-arrow')
-                    .catalogue-filter__category-content.is-active(data-toggle="content")
-                      .catalogue-filter__category-element
-                        +checkbox('Арахис')
-                      .catalogue-filter__category-element
-                        +checkbox('Бразильский орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Грецкий орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Кедровый орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Кешью')
-                      .catalogue-filter__category-element
-                        +checkbox('Кокос')
-                      .catalogue-filter__category-element
-                        +checkbox('Макадамия')
-                      .catalogue-filter__category-element
-                        +checkbox('Миндаль')
-                      .catalogue-filter__category-element
-                        +checkbox('Орехи карамелизированные')
-                      .catalogue-filter__category-element
-                        +checkbox('Пека')
-                      .catalogue-filter__category-element
-                        +checkbox('Смесь ореховая')
-                      .catalogue-filter__category-element
-                        +checkbox('Фисташки')
-                      .catalogue-filter__category-element
-                        +checkbox('Фундук')
-                      .catalogue-filter__category-element
-                        +checkbox('Ядро абрикосовой косточки')
+                  
                   //category
-                  .catalogue-filter__category(data-toggle="parent")  
-                    a(href="javascript:void(0);" data-toggle="trigger").catalogue-filter__category-head
+                  .catalogue-filter__category
+                    a(href="javascript:void(0);").catalogue-filter__category-head
                       span Шоколад и мармелад
                       svg.icon
                         use(xlink:href='./img/icons/sprite.svg#drop-arrow')
-                    .catalogue-filter__category-content(data-toggle="content")
-                      .catalogue-filter__category-element
-                        +checkbox('Арахис')
-                      .catalogue-filter__category-element
-                        +checkbox('Бразильский орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Грецкий орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Кедровый орех')
 
+                  //category    
                   .catalogue-filter__category 
-                    a(href="#").catalogue-filter__category-head
+                    a(href="javascript:void(0);").catalogue-filter__category-head.is-active
                       span Смеси
+
+                  //category    
                   .catalogue-filter__category 
-                    a(href="#").catalogue-filter__category-head
+                    a(href="javascript:void(0);").catalogue-filter__category-head
                       span Семечки
 
                   //category
-                  .catalogue-filter__category(data-toggle="parent")  
-                    a(href="javascript:void(0);" data-toggle="trigger").catalogue-filter__category-head
+                  .catalogue-filter__category
+                    a(href="javascript:void(0);").catalogue-filter__category-head
                       span Сладости
                       svg.icon
                         use(xlink:href='./img/icons/sprite.svg#drop-arrow')
-                    .catalogue-filter__category-content(data-toggle="content")
-                      .catalogue-filter__category-element
-                        +checkbox('Арахис')
-                      .catalogue-filter__category-element
-                        +checkbox('Бразильский орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Грецкий орех')
-                      .catalogue-filter__category-element
-                        +checkbox('Кедровый орех')
+                  
+                  //category
                   .catalogue-filter__category 
-                    a(href="#").catalogue-filter__category-head
+                    a(href="javascript:void(0);").catalogue-filter__category-head
                       span Наборы
 
                 .catalogue-filter__box
