--- a/src/views/katalog.pug
+++ b/src/views/katalog.pug
@@ -26,18 +26,23 @@ block content
 
                 .catalogue-filter__box
                   //category
-                  .catalogue-filter__category
-                    a(href="javascript:void(0);").catalogue-filter__category-head
+                  .catalogue-filter__category(data-toggle="parent")
+                    a(href="javascript:void(0);" data-toggle="trigger").catalogue-filter__category-head
                       span Орехи
                       svg.icon
                         use(xlink:href='./img/icons/sprite.svg#drop-arrow')
+                    .catalogue-filter__category-content(data-toggle="content")
+
+                      .catalogue-filter__category-element 
+                        a(href="#") Дочерняя ссылка 1 
+                      .catalogue-filter__category-element
+                        a(href="#") Дочерняя ссылка 2
+
                   
                   //category
                   .catalogue-filter__category
                     a(href="javascript:void(0);").catalogue-filter__category-head
                       span Шоколад и мармелад
-                      svg.icon
-                        use(xlink:href='./img/icons/sprite.svg#drop-arrow')
 
                   //category    
                   .catalogue-filter__category 
@@ -53,8 +58,6 @@ block content
                   .catalogue-filter__category
                     a(href="javascript:void(0);").catalogue-filter__category-head
                       span Сладости
-                      svg.icon
-                        use(xlink:href='./img/icons/sprite.svg#drop-arrow')
                   
                   //category
                   .catalogue-filter__category 
