--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -57,8 +57,6 @@ header.header(data-scroll-lock-fill-gap)
             span
             span
 
-
-
 nav.mobile-navigation
   .mobile-navigation__element
     .mobile-navigation__head 
@@ -75,6 +73,36 @@ nav.mobile-navigation
             svg.icon
               use(xlink:href='./img/icons/sprite.svg#shopping-bag')
             | Каталог
+
+          ul.mobile-catalogue(data-toggle="group")
+            li.mobile-catalogue__item.is-active(data-toggle="parent") 
+              a(href="javascript:void(0);" data-toggle="trigger").mobile-catalogue__category-parent.link.is-active
+                span Орехи
+                svg.icon
+                  use(xlink:href='./img/icons/sprite.svg#drop-arrow')
+              ul(data-toggle="content").mobile-catalogue__category-list.is-active
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Арахис
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Бразильский орех
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Грецкий орех
+            li.mobile-catalogue__item(data-toggle="parent") 
+              a(href="javascript:void(0);" data-toggle="trigger").mobile-catalogue__category-parent.link
+                span Семена
+                svg.icon
+                  use(xlink:href='./img/icons/sprite.svg#drop-arrow')
+              ul(data-toggle="content").mobile-catalogue__category-list
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Кунжут
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Подсолнечник
+                li.mobile-catalogue__category-item
+                  a(href="#").mobile-catalogue__category-link.link Тыква
+
+            
+        //категории каталога конец 
+
         li.mobile-nav-list__item 
           a(href="./blog.html").mobile-nav-list__link.link Блог
         li.mobile-nav-list__item 
