--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -1525,6 +1525,8 @@
       overflow: auto;
       padding: 50px 0;
     }
+
+    display: none !important;
   }
   @include media-breakpoint-up(sm) {
     &__box {
@@ -1543,6 +1545,51 @@
     }
   }
 }
+
+.mobile-catalogue {
+  padding-left: 15px;
+  &__category {
+
+  }
+  &__category-parent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 0;
+    font-size: 18px;
+    .icon {
+      width: 14px;
+      height: 14px;
+      flex-shrink: 0;
+      transform: rotate(-90deg);
+    }
+    &.is-active {
+      color: var(--color-accent-1);
+      font-weight: 700;
+      .icon {
+        transform: rotate(0);
+      }
+    }
+  }
+  &__category-list {
+    display: none;
+    padding: 0 0 10px 15px;
+    &.is-active {
+      display: block;
+    }
+  }
+  &__category-link {
+    display: block;
+    padding: 8px 0;
+    font-size: 16px;
+    &.is-active {
+      color: var(--color-accent-1);
+    }
+  }
+}
+
+
 
 .article {
   &__container {
