--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -74,6 +74,7 @@ nav.mobile-navigation
               use(xlink:href='./img/icons/sprite.svg#shopping-bag')
             | Каталог
 
+          //категории каталога начало 
           ul.mobile-catalogue(data-toggle="group")
             li.mobile-catalogue__item.is-active(data-toggle="parent") 
               a(href="javascript:void(0);" data-toggle="trigger").mobile-catalogue__category-parent.link.is-active
@@ -99,9 +100,7 @@ nav.mobile-navigation
                   a(href="#").mobile-catalogue__category-link.link Подсолнечник
                 li.mobile-catalogue__category-item
                   a(href="#").mobile-catalogue__category-link.link Тыква
-
-            
-        //категории каталога конец 
+          //категории каталога конец 
 
         li.mobile-nav-list__item 
           a(href="./blog.html").mobile-nav-list__link.link Блог
